--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -26,7 +26,7 @@ tagline: "creator of worlds"
 google_analytics_key: UA-xxxx-x
 
 # Toggle "Postings are my own" disclaimer in footer
-show_disclaimer: true
+show_disclaimer: false
 
 # Toggle link/icon to view atom feed (/atom.xml) in sidebar
 show_atom_feed: true
